# ompi-testbench

./: .gitmodules  CMakeLists.txt  mpi_hello.c
